--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "qs": "^5.1.0",
+    "simply-deferred": "^3.0.0",
+    "superagent": "^0.20.0",
+    "underscore": "^1.8.3"
+  }
 }
