--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "qs": "^5.1.0",
     "simply-deferred": "^3.0.0",
     "superagent": "^0.20.0",
-    "underscore": "^1.8.3"
+    "underscore": "~1.6.0"
   },
   "license": "ISC"
 }
