--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "name": "reku",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/jasmine"
   },
   "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:1stdibs/reku.git"
+  },
   "dependencies": {
     "qs": "^5.1.0",
     "simply-deferred": "^3.0.0",
     "superagent": "^0.20.0",
     "underscore": "~1.6.0"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jasmine": "^2.3.2"
+  }
 }
